# monapi

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: app.py  monitor.py  routes.py  settings.py  smtp.py  types_.py
src/controllers/: __init__.py  monitor_controller.py
src/services/: __init__.py  monitor_service.py  smtp_service.py
