[project]
name = "api-monitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosmtplib>=5.1.0",
    "dotenv>=0.9.9",
    "email-validator>=2.3.0",
    "httpx>=0.28.1",
    "pydantic-file-settings>=0.1.0",
    "quart>=0.20.0",
]
